# UTO

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE-APACHE  LICENSE-MIT  PHASE3_COMPLETION_AND_PHASE4_PLANNING.md  README.md  install-local.ps1  install-local.sh  install.ps1  install.sh  static_site.local.linux.sh  static_site.local.mac.sh  static_site.local.win.ps1
.cargo/: config.toml
.gemini/: agent.json  instructions.md  prompts.md  settings.json
.github/: copilot-instructions.md
.github/agents/: uto-architect.agent.md
.github/instructions/: docs.instructions.md  rust-uto.instructions.md
.github/prompts/: add-new-driver.prompt.md  run-appium-demo.prompt.md  run-chromedriver-demo.prompt.md
.github/workflows/: ci.yml  pages.yml
docs/: 0001-zero-config-infrastructure.md  0002-driver-communication-layer.md  0003-continuous-integration.md  0004-copilot-customization.md  0005-project-roadmap-phase-2-completion.md  0006-appium-driver-auto-repair.md  0007-simplicity-pillar.md  0008-phase-3-recognition-loop-mvp.md  0009-framework-cli-and-reporting-first.md  0010-phase-3-completion-and-phase-4-planning.md  0011-uto-test-crate-and-clean-soc-guidelines.md  0012-uto-test-api-usage-guide.md  0013-getting-started-and-troubleshooting.md  0014-ui-mode.md  0015-install-script-and-onboarding.md  0015-uto-studio-visual-test-authoring.md  0016-competitive-vision-and-exit-strategy.md  0016-uto-studio-visual-test-authoring.md  0017-competitive-vision-and-exit-strategy.md  0018-transparent-test-execution-without-runner-binary.md  0019-phase-5bis-ui-improvements.md  0020-phase-5.5-library-ergonomics.md  0021-phase-6-studio-kickoff.md  ARCHITECTURE-COMPARISON-test-runner-elimination.md  DRAFT-0018-transparent-test-execution-without-runner-binary.md  IMPLEMENTATION-GUIDE-test-runner-elimination.md  IMPROVEMENTS_SUMMARY.md  LEARNING_PATH.md  PHASE5_UI_EXPLORATION_SUMMARY.md  PLANNING-INDEX-test-runner-elimination.md  gemini-setup-conversation-copy.md  gemini-setup-conversation.md  manifesto.md  mind-map.km  opportunity-canvas.md  project-structure-guide.md  rust-beginner-guide.md  rust-patterns-cheatsheet.md  testing-guide.md  user-story-mapping.md  (+1 more)
docs/articles/beta-annoucements/: MEDIUM_ARTICLE_SERIES_COMPLETE.md  MEDIUM_BETA_ARTICLE_PLAN.md  MEDIUM_PART2_UI_LIVE_DEBUGGING.md
examples/: README.md  validate-cli.sh
examples/phases/phase3-intent/: Cargo.toml  README.md  uto.json
examples/phases/phase3-intent/tests/: mobile_phase3_intent.rs  web_phase3_intent.rs
examples/phases/phase4-framework/: Cargo.toml  README.md  uto.json
examples/phases/phase4-framework/.uto/reports/: last-run.html  last-run.json
examples/phases/phase4-framework/.uto/reports/live-events/: web_example__web_example_phase4_hero_copy_is_visible_or_skips.jsonl  web_example__web_example_phase4_title_is_non_empty_or_skips.jsonl  web_intent_example__web_example_phase4_form_flow_or_skips.jsonl  web_intent_example__web_example_phase4_navigation_flow_or_skips.jsonl
examples/phases/phase4-framework/src/: lib.rs
examples/phases/phase4-framework/src/mobile/: settings.rs
examples/phases/phase4-framework/src/web/: basic.rs  intents.rs  mod.rs
examples/phases/phase4-framework/tests/: mobile_example.rs  web_example.rs  web_intent_example.rs
examples/phases/phase4-framework/tests/support/: mod.rs
examples/phases/phase5-ui-mode/: Cargo.toml  README.md  uto.json
examples/phases/phase5-ui-mode/src/: lib.rs
examples/phases/phase5-ui-mode/tests/: smoke_test.rs
examples/phases/phase6-studio/: Cargo.toml  README.md  uto.json
examples/phases/phase6-studio/src/: lib.rs
examples/phases/phase6-studio/tests/: schema_compat.rs  studio_workflow.rs
examples/phases/saucedemo-login/: Cargo.toml  README.md  uto.json
examples/phases/saucedemo-login/.uto/reports/: last-run.html  last-run.json  live-run-events.jsonl  manual-live.jsonl
examples/phases/saucedemo-login/src/: lib.rs
examples/phases/saucedemo-login/src/web/: login.rs
examples/phases/saucedemo-login/tests/: login_test.rs
examples/phases/saucedemo-login/tests/support/: mod.rs
examples/phases/ui-showcase/: Cargo.toml  INDEX.md  MATURITY.md  QUICKSTART.md  README.md  SUMMARY.md  uto.json
examples/phases/ui-showcase/.uto/reports/: last-run.html  last-run.json
examples/phases/ui-showcase/src/: lib.rs
examples/phases/ui-showcase/tests/: ui_features_test.rs  web_intent_showcase.rs
poc/: Cargo.toml
poc/src/phase3_intent/: mobile.rs  mod.rs  web.rs
scripts/: check_ai_config_sync.sh  sync_ai_configs.sh
uto-cli/: Cargo.toml
uto-cli/src/: commands.rs  config.rs  io.rs  main.rs  parsing.rs  templates.rs
uto-cli/tests/: cli_workflow.rs  generated_project_compat.rs
uto-core/: Cargo.toml  README.md
uto-core/src/: error.rs  lib.rs  main.rs
uto-core/src/driver/: mod.rs
uto-core/src/env/: mobile_setup.rs  mod.rs  platform.rs  provisioning.rs
uto-core/src/session/: appium_probe.rs  mobile.rs  mobile_accessibility.rs  mobile_capabilities.rs  mobile_connection.rs  mod.rs  web.rs
uto-core/src/vision/: consensus.rs  inference.rs  latency.rs  mod.rs  postprocessing.rs  preprocessing.rs
uto-core/tests/: session_integration.rs
uto-logger/: Cargo.toml  README.md
uto-logger/src/: lib.rs
uto-reporter/: Cargo.toml  README.md
uto-reporter/src/: html.rs  lib.rs  report.rs  schema.rs  suite_report.rs
uto-runner/: Cargo.toml
uto-runner/src/: html.rs  lib.rs  live.rs  options.rs  report.rs  schema.rs
uto-site/: Cargo.toml  README.md
uto-site/content/: comparison.md  contribute.md  examples.md  getting-started.md  index.md  troubleshooting.md
uto-site/src/: main.rs
uto-site/static/: site.js  style.css
uto-site/templates/: base.html  comparison.html  examples.html  index.html  page.html
uto-test/: Cargo.toml  README.md
uto-test-macros/: Cargo.toml
uto-test-macros/src/: lib.rs
uto-test/src/: lib.rs  live_stream.rs  managed_session.rs  start.rs  suite.rs
uto-ui/: Cargo.toml
uto-ui/src/: lib.rs  runner.rs  server.rs  studio.rs  watcher.rs
uto-ui/src/assets/: index.html
uto-ui/tests/: integration.rs
(+7 files in other folders)
