[package]
name = "uto-logger"
version = "0.1.0"
edition = "2021"
description = "Structured logging and loader utilities for UTO"
license = "MIT OR Apache-2.0"
repository = "https://github.com/uinf/uto"
homepage = "https://utotest.dev"
documentation = "https://docs.rs/uto-logger"
readme = "README.md"
keywords = ["logging", "progress", "automation", "testing"]
categories = ["development-tools::testing"]

[dependencies]
indicatif = "0.17"
once_cell = "1"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
