[package]
name = "uto-test"
version = "0.1.0"
edition = "2021"
description = "End-user test authoring helpers for UTO"

[dependencies]
uto-core = { path = "../uto-core" }
uto-reporter = { path = "../uto-reporter" }
uto-runner = { path = "../uto-runner" }
uto-test-macros = { path = "../uto-test-macros" }
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
