[package]
name = "uto-ui"
version = "0.1.0"
edition = "2021"
description = "UTO interactive UI mode — embedded HTTP + WebSocket server for test visualization"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
log = "0.4"
uto-reporter = { path = "../uto-reporter" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"
tempfile = "3"
