[package]
name = "uto-ui"
version = "0.1.0"
edition = "2021"
description = "UTO interactive UI mode — embedded HTTP + WebSocket server for test visualization"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
notify = "6"
tower-http = { version = "0.6", features = ["fs"] }
uto-reporter = { path = "../uto-reporter" }
uto-runner = { path = "../uto-runner" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"
tempfile = "3"
tokio-tungstenite = "0.28"
futures-util = "0.3"
